# raw_sorter

./: .gitignore  README.md  main.py  pyproject.toml
src/: func.py
tests/: test_config.py  test_func.py
